Adicionado botão Voltar na tela de Visualização de Usuários

--- a/ComprasCompartilhadas-war/web/exibe_usuarios.xhtml
+++ b/ComprasCompartilhadas-war/web/exibe_usuarios.xhtml
@@ -20,6 +20,10 @@
                    </p:column>
                 </p:dataTable>
             </h:form>
+            
+        <h:form>
+           <h:commandButton id="voltar" value="Voltar" action="index"/>
+        </h:form>
 
         </f:view>
     </h:body>
