Cadastro de usuário funcionando

--- a/ComprasCompartilhadas-war/web/exibe_usuarios.xhtml
+++ b/ComprasCompartilhadas-war/web/exibe_usuarios.xhtml
@@ -22,6 +22,7 @@
             </h:form>
             
         <h:form>
+            <h:commandButton id="cadastrar" value="Cadastrar novo usuário" action="cadastra_usuario" styleClass="ui-priority-primary"/>  
            <h:commandButton id="voltar" value="Voltar" action="index"/>
         </h:form>
 
