Adicionada mensagem de erro no login e iniciada função de Alteração dos Dados Usuário

--- a/ComprasCompartilhadas-war/web/index.xhtml
+++ b/ComprasCompartilhadas-war/web/index.xhtml
@@ -18,6 +18,10 @@
            <p><p:commandButton id="cadastrar" value="Cadastre-se" action="cadastra_usuario" styleClass="ui-priority-primary"/></p>
         </h:form>
         
+        <h:form>
+            <p:messages id="erro" autoUpdate="true"/>
+        </h:form>
+        
     </h:body>
 </html>
 
