--- a/ComprasCompartilhadas-war/web/exibe_lista_compras.xhtml
+++ b/ComprasCompartilhadas-war/web/exibe_lista_compras.xhtml
@@ -1,16 +1,26 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>TODO supply a title</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
+    <h:head>
+        <title>Lista de Compras</title>
+    </h:head>
+    <h:body>
+        <f:view>
+            <h:form>
+                <h1><h:outputText value="Lista de Compras"/></h1>
+                <p:dataTable var="listaCompras" value="#{listaComprasMBean.listasCompras()}">
+                   <p:column headerText="Id">
+                      <h:inputText value="#{listaCompras.id}" />
+                   </p:column>
+                   <p:column headerText="Nome">
+                      <h:inputText value="#{listaCompras.nome}" />
+                   </p:column>
+                </p:dataTable>
+            </h:form>
+         <p><p:link id="voltar" value="Voltar" outcome="index"/></p>
+         </f:view>
+       </h:body>
 </html>
