--- a/ComprasCompartilhadas-war/web/exibe_lista_compras.xhtml
+++ b/ComprasCompartilhadas-war/web/exibe_lista_compras.xhtml
@@ -11,16 +11,16 @@
         <f:view>
             <h:form>
                 <h1><h:outputText value="Lista de Compras"/></h1>
-                <p:dataTable var="listaCompras" value="#{listaComprasMBean.listasCompras()}">
+                <p:dataTable var="listaCompras" value="#{listaComprasMBean.getListasCompras()}">
                    <p:column headerText="Id">
-                      <h:inputText value="#{listaCompras.id}" />
+                       <h:inputText value="#{listaCompras.idUsuario}" />
                    </p:column>
                    <p:column headerText="Nome">
-                      <h:inputText value="#{listaCompras.nome}" />
+                       <h:inputText value="#{listaCompras.nome}" />
                    </p:column>
                 </p:dataTable>
             </h:form>
-         <p><p:link id="voltar" value="Voltar" outcome="index"/></p>
+         <p><p:link id="voltar" value="Voltar" outcome="menu_logado"/></p>
          </f:view>
        </h:body>
 </html>
