corrects UsuarioMBean scope

--- a/ComprasCompartilhadas-war/web/exibe_usuarios.xhtml
+++ b/ComprasCompartilhadas-war/web/exibe_usuarios.xhtml
@@ -28,7 +28,7 @@
            <p:commandButton id="cadastrar" value="Cadastrar novo usuário" action="cadastra_usuario" styleClass="ui-priority-primary"/>  
            <p:commandButton id="editar" value="Editar usuário" action="edita_usuario" styleClass="ui-priority-primary"/>
            <p:commandButton id="remover" value="Remover usuário" action="remove_usuario" styleClass="ui-priority-primary"/>
-           <p><p:link id="voltar" value="Voltar" outcome="index"/></p>
+           <p><p:link id="voltar" value="Voltar" outcome="menu_logado"/></p>
         </h:form>
         </f:view>
     </h:body>
