--- a/ComprasCompartilhadas-war/web/cria_lista_compras.xhtml
+++ b/ComprasCompartilhadas-war/web/cria_lista_compras.xhtml
@@ -14,7 +14,7 @@
            
            <p><h:outputLabel value = "Nome" /></p>
            <p><h:inputText id="nomeLista" value="#{listaComprasMBean.listaCompras.nome}"/></p>
-           <p:commandButton id="cadastrarLista" value="Cadastrar" action="#{usuarioListaMBean.criaListaCompras(usuarioMBean.usuario, listaComprasMBean.listaCompras)}" styleClass="ui-priority-primary"/>           
+           <p:commandButton id="cadastrarLista" value="Cadastrar" action="#{listaComprasMBean.criaListaCompras(usuarioMBean.usuario, listaComprasMBean.listaCompras)}" styleClass="ui-priority-primary"/>           
 
         </h:form>
         
@@ -23,4 +23,4 @@
         </h:form> 
 
     </h:body>
-</html>
+</html>         
