--- a/ComprasCompartilhadas-war/web/menu_logado.xhtml
+++ b/ComprasCompartilhadas-war/web/menu_logado.xhtml
@@ -18,7 +18,7 @@
             
             <h:form>
                 <p><p:commandButton id="criaListaCompras" value="Criar Lista de Compras" action="cria_lista_compras"/></p>
-                <p><p:commandButton id="exibeListaCompras" value="Exibir Listas criadas" action="exibe_lista_compras"/></p>
+                <p><p:commandButton id="exibeListaCompras" value="Minhas listas" action="exibe_lista_compras"/></p>
                 <p><p:commandButton id="alteraUsuario" value="Alterar dados cadastrais" action="edita_usuario"/></p>
                 <p><p:commandButton id="logout" value="Fazer Logout" action="index"/></p>
             </h:form>
